# duplicates_assesment

./: README.md  pyproject.toml
src/: duplicates.py
tests/: test_duplicates.py
